# tf-m-tests

test/secure_fw/: CMakeLists.txt  secure_suites.c  secure_tests.cmake
test/secure_fw/suites/: CMakeLists.txt
test/secure_fw/suites/libafl/: CMakeLists.txt
test/secure_fw/suites/libafl/non_secure/: ava_ns_interface_testsuite.c  ava_ns_tests.h
test/secure_fw/suites/libafl/secure/: libafl_s_interface_testsuite.c  libafl_s_tests.h
